--- a/08/display.html
+++ b/08/display.html
@@ -24,9 +24,9 @@
 <body>
     <nav>
         <ul>
-            <li>shop/li>
-            <li>info/li>
-            <li>setting/li>
+            <li>shop</li>
+            <li>info</li>
+            <li>setting</li>
             <li>my</li>
         </ul>
     </nav>
