--- a/08/float_1.html
+++ b/08/float_1.html
@@ -8,6 +8,7 @@
         img {
             float: left; /*그림 글 한줄에 붙게*/
             margin-right: 40px;
+            width: 30%;
 
         }
     </style>
