--- a/16/array.html
+++ b/16/array.html
@@ -42,8 +42,31 @@
         var popped2 = chars.shift();
         document.write("꺼낸 요소: ", popped2, " | 배열: ", chars);
         document.write("<hr>");
-        
 
+        //splice()는 배열의 특정한 부분만 잘라내 반환
+        var numbers = [1, 2, 3, 4, 5];
+        var newNumbers = numbers.splice(2);//인덱스 2부터 끝까지 잘라서 반환
+        document.write("반환된 배열: " + newNumbers + "<br>");
+        document.write("변경된 배열: " + numbers);
+        document.write("<br>");
+
+        var study = ["html", "css", "web", "jquery", "react"];
+        var newStudy = study.splice(2,1); //인덱스 2인 요소부터 1개 삭제
+        document.write("반환된 배열: " + newStudy + "<br>");
+        document.write("변경된 배열: " + study);
+        document.write("<hr>");
+
+        var newStudy2 = study.splice(2, 1, "js"); ///인덱스 2인 요소부터 1개 삭제하고 새로윤 요소 "js" 추가
+        document.write("반환된 배열: " + newStudy2 + "<br>");
+        document.write("변경된 배열:" + study);
+
+        //slice()는 기본 배열을 바꾸지 않으면서 요소를 꺼냄(splice는 기존 배열이 바뀜)
+        var colors=["red", "green", "blue", "white", "black"];
+        var colors2 = colors.slice(2); //인덱스 2인 요소부터 끝까지 꺼냄
+        document.write(colors2);
+        document.write("<br>");
+        var color23 = colors.slice(2,4); //인덱스 2부터 (4 직전인)3까지 꺼냄
+        document.write(colors3)
     </script>
 </body>
 </html>
